<resources>
    <string name="app_name">GreenPath</string>
    <string name="title_carbon">Carbon +</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_water_entry">Water +</string>
    <string name="title_waste_entry">Waste +</string>
    <string name="title_settings">Settings</string>
    <string name="label_start_line_1">Track your footprint</string>
    <string name="label_start_line_2">Get eco-friendly tips</string>
    <string name="label_start_line_3">Join the green community</string>
    <string name="title_dashboard_total_footprint">Total Carbon Footprint</string>
    <string name="value_dashboard_total_footprint">0</string>
    <string name="title_dashboard_footprint_kgco2">kgCO2</string>
    <string name="title_dashboard_transport_emission">Transport Emissions </string>
    <string name="value_dashboard_transport_emission">0</string>
    <string name="title_dashboard_energy_emission">Energy Emissions </string>
    <string name="value_dashboard_energy_emission">0</string>
    <string name="title_dashboard_waste_emission">Waste Emissions </string>
    <string name="value_dashboard_waste_emission">0</string>
    <string name="title_dashboard_water_usage">Water Usage </string>
    <string name="value_dashboard_water_usage">0</string>
    <string name="title_dashboard_Liters">liters</string>
    <string name="title_carbon_transport_data">Transport Data</string>
    <string name="label_carbon_mode_transport">Transport Mode</string>
    <string name="label_carbon_distance">Distance (km)</string>
    <string name="title_carbon_home_energy_use">Home Energy Use</string>
    <string name="label_carbon_energy_source">Energy Source</string>
    <string name="label_carbon_usage_electricity">Usage (kWh)</string>
    <string name="label_carbon_usage_gas">Gas (m3)</string>
    <string name="label_submit">Submit</string>
    <string name="label_date">Date</string>
    <string name="title_water_shower">Shower / Bath</string>
    <string name="label_water_bath_usage">Water Used (ltr)</string>
    <string name="title_water_dishwashing">Dishwashing</string>
    <string name="label_water_dishwashing_method">Method</string>
    <string name="title_water_other">Other Water Usage</string>
    <string name="label_water_drinking">Drinking</string>
    <string name="label_water_miscellaneous">Miscellaneous</string>
    <string name="title_water_laundry">Laundry</string>
    <string name="label_water_laundry_loads">Number of Loads</string>
    <string name="label_waste_plastic">Plastic (Kg)</string>
    <string name="label_waste_paper">Paper (Kg)</string>
    <string name="label_waste_metal">Metal (Kg)</string>
    <string name="label_waste_organic">Organic (Kg)</string>
    <string name="label_waste_glass">Glass (Kg)</string>
    <string name="label_waste_general">General (Kg)</string>

    <string-array name="mode_of_transport_items">
        <item>Bus</item>
        <item>Train</item>
        <item>Car</item>
        <item>Bicycle</item>
        <item>Walk</item>
    </string-array>
    <string-array name="energy_source_items">
        <item>Electricity</item>
        <item>SolarPower</item>
        <item>WindPower</item>
        <item>NaturalGas</item>
        <item>HeatingOil</item>
    </string-array>
    <string-array name="mode_of_dishwashing">
        <item>Dishwasher</item>
        <item>Hand-washing</item>
    </string-array>
    <string-array name="mode_of_watering">
        <item>Hose</item>
        <item>Sprinkler</item>
        <item>Drip</item>
    </string-array>
    <string-array name="laundry_types">
        <item>FrontLoad</item>
        <item>TopLoad</item>
    </string-array>

    <string name="title_add">Add Meal</string>
    <string name="value_dashboard_calorie_budget">1766</string>
    <string name="value_dashboard_breakfast_calories">66</string>
    <string name="title_dashboard_breakfast_calories">Breakfast</string>
    <string name="title_dashboard_lunch_calories">Lunch</string>
    <string name="value_dashboard_lunch_calories">0</string>
    <string name="title_dashboard_dinner_calories">Dinner</string>
    <string name="value_dashboard_dinner_calories">0</string>
    <string name="title_dashboard_snacks_calories">Snacks</string>
    <string name="value_dashboard_snacks_calories">0</string>
    <string name="value_dashboard_left_calories">1700</string>
    <string name="title_dashboard_left_calories">Left</string>
    <string name="title_dashboard_exercise">Exercise</string>
    <string name="value_dashboard_exercise_calories">0</string>
    <string name="title_dashboard_water_calories">Water</string>
    <string name="value_dashboard_water_calories">0</string>
    <string name="title_dashboard_goal_plan">My Weight Goal Plan</string>
    <string name="value_dashboard_weight_now">__ kg</string>
    <string name="title_dashboard_weight_now">Now</string>
    <string name="value_dashboard_weight_future">__ kg</string>
    <string name="value_dashboard_future_date">___ __</string>

    <string name="label_dashboard_cal_completed">Completed</string>
    <string name="title_program_step1">Lets build your program</string>
    <string name="title_program_step1_gender">Gender</string>
    <string name="label_program_step1_gender_male">Male</string>
    <string name="label_program_step1_gender_female">Female</string>
    <string name="label_program_step1_weight">Weight</string>
    <string name="label_program_setp1_weightKg">kg</string>
    <string name="label_program_step1_height">Height</string>
    <string name="label_program_step1_heightCm">cm</string>
    <string name="label_program_step1_dob">DOB</string>
    <string name="title_program_step1_program_type">Select your program</string>
    <string name="label_program_step1_type_lose">Lose weight</string>
    <string name="label_program_step1_type_gain">Gain weight</string>
    <string name="label_program_next">Next</string>
    <string name="title_program_step2_activity_level">Level of physical activity</string>
    <string name="label_program_step2_activity_sedentary">Sedentary (little or no exercise)</string>
    <string name="label_program_step2_activity_lightly">Lightly active</string>
    <string name="label_program_step2_activity_moderate">Moderately active</string>
    <string name="label_program_step2_acitivity_very">Very active</string>
    <string name="label_program_step2_acitivity_super">Super active</string>
    <string name="label_program_finish">Finish</string>
    <string name="label_program_back">Back</string>
    <string name="title_program_step2_final_result">This is your program</string>
    <string name="label_program_step2_final_info"></string>
    <string name="label_program_backto_login">Back to login</string>

    <string name="label_start_get_started">Get Started</string>
    <string name="label_start_sign_in">Sign In</string>
    <string name="label_signup_username">Username</string>
    <string name="label_signup_password">Password</string>
    <string name="label_button_signup">Sign Up</string>
    <string name="label_button_login">Login</string>
    <string name="label_login_forget_password">forget password</string>
    <string name="title_login_other_logins">or Sign in with</string>
    <string name="label_login_with_google">Google</string>
    <string name="label_program_create_profile">Create Profile</string>
    <string name="label_program_step2_daily_calorie">Daily Calorie Intake :</string>
    <string name="value_program_step2_daily_calorie">____</string>
    <string name="label_add_meal_meal_type">Meal</string>
    <string name="btn_label_add_meal">Add</string>
    <string name="buttonLableLogout">Logout</string>
    <string name="lable_profile_username">Username</string>
    <string name="label_profile_password">Password</string>
    <string name="label_profile_firstname">First Name</string>
    <string name="label_profile_lastname">Last Name</string>
    <string name="button_label_profile_update">Update</string>
    <string name="label_date_format_hint">2000-10-31</string>

    <string-array name="meal_type_items">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks</item>
    </string-array>

</resources>